# tech_sem2

./: .gitignore  README.md
Circustrain/: CMakeLists.txt
Circustrain/include/: Cart.hpp  Train.hpp
Circustrain/src/: Cart.cpp  Train.cpp  main.cpp
animal_shelter_C/: .gitignore  CMakeLists.txt
animal_shelter_C/Unity/: unity.c  unity.h  unity_internals.h  unity_test_module.c  unity_test_module.h
animal_shelter_C/include/: file_element.h  list.h  resource_detector.h  terminal_io.h
animal_shelter_C/src/: administration.c  administration.h  animal.h  file_element.c  list.c  main.c  resource_detector.c  terminal_io.c
animal_shelter_C/test/: administration_test.c  file_element_test.c  main.c
animal_shelter_sem2/: CMakeLists.txt  main.cpp
animal_shelter_sem2/include/: administrationForm.hpp  animal.hpp  cat.hpp  dog.hpp  shelter.hpp  simple_date.hpp
animal_shelter_sem2/src/: administrationForm.cpp  animal.cpp  cat.cpp  dog.cpp  shelter.cpp  simple_date.cpp
bit-manipulations/: 1-Assignment - BitManipulations.docx
bit-manipulations/Unity/: unity.c
bit-manipulations/shared/: bit_stuff.c  bit_stuff.h
stegano/: stegano.c  stegano_test.c
stegano/Unity/: unity_internals.h
sudoku/: CMakeLists.txt
sudoku/include/: board.h
sudoku/src/: board.c
sudoku_c/: CMakeLists.txt  README
sudoku_c/diagrams/: class diagram
sudoku_c/include/: display.h  game.h  user_interface.h
sudoku_c/src/: display.c  game.c  main.c  user_interface.c
sudoku_c/test/: test_UI.c
watch/: 1-Opgave-Watch-registers.docx  Makefile
watch/Unity/: unity_test_module.c
watch/product/: main.c
watch/shared/: watch_registers.c  watch_registers.h
watch/test/: watch_registers_test.c
yahtzee/: CMakeLists.txt  README  main.cpp
yahtzee/Diagrams/: Class diagram  Use case diagram
yahtzee/include/: dice.hpp  game.hpp  player.hpp  scorecard.hpp
yahtzee/src/: dice.cpp  game.cpp  player.cpp  scorecard.cpp
